# aspeed-zephyr-project

./: .gitmodules  README.md  west.yml
apps/aspeed-pfr/: Kconfig  (+4 more)
apps/aspeed-pfr/src/: CMakeLists.txt  main.c
apps/aspeed-pfr/src/AspeedStateMachine/: AspeedStateMachine.c  AspeedStateMachine.h  TestShell.c  common_smc.h
apps/aspeed-pfr/src/SPDM/: CMakeLists.txt  README.md  SPDMBuffer.c  SPDMCommon.h  SPDMContext.c  SPDMContext.h  SPDMCrypto.c  SPDMCrypto.h  SPDMDefinitions.h  SPDMKeyOperation.c  SPDMKeyOperation.h  SPDMMain.c  SPDMMctpBinding.c  SPDMMctpBinding.h  SPDMRequester.c  SPDMRequester.h  SPDMResponder.c  SPDMResponder.h  SPDMSession.c  SPDMSession.h
apps/aspeed-pfr/src/Smbus_mailbox/: Smbus_mailbox.c  Smbus_mailbox.h
apps/aspeed-pfr/src/cerberus_pfr/: cerberus_pfr_authentication.c  cerberus_pfr_definitions.h  cerberus_pfr_recovery.c  cerberus_pfr_spi_filtering.c  cerberus_pfr_update.c
apps/aspeed-pfr/src/i3c/: i3c_util.h
apps/aspeed-pfr/src/include/: SmbusMailBoxCom.h
apps/aspeed-pfr/src/intel_pfr/: intel_pfr_authentication.c  intel_pfr_definitions.h  intel_pfr_pbc.c  intel_pfr_pfm_manifest.c  intel_pfr_pfm_manifest.h  intel_pfr_provision.h  intel_pfr_recovery.c  intel_pfr_recovery.h  intel_pfr_spi_filtering.c  intel_pfr_update.c  intel_pfr_verification.c
apps/aspeed-pfr/src/mctp/: mctp.h  mctp_i3c.c  mctp_i3c.h  mctp_i3c_target.c  plat_mctp.c  plat_mctp.h  test_mctp_shell.c
apps/aspeed-pfr/src/pfr/: pfr_common.h  pfr_recovery.c  pfr_verification.c
apps/aspeed-pfr/src/platform_monitor/: CMakeLists.txt  platform_monitor.c  spim_monitor.c
(+173 files in other folders)
